# schwab-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/skills/account/: SKILL.md
plugin/skills/chart-orders/: SKILL.md  chart.html  chart_orders.py  test_chart_orders.py
plugin/skills/instruments/: SKILL.md
plugin/skills/market/: SKILL.md
plugin/skills/orders/: SKILL.md
plugin/skills/quotes/: SKILL.md
src/schwab_mcp/: _mcp.py  client.py  logging_config.py  server.py
src/schwab_mcp/tools/: _response.py  accounts.py  instruments.py  market_data.py  orders.py  session.py
tests/: conftest.py  test_client.py  test_logging_config.py  test_response.py  test_server.py  test_tools_accounts.py  test_tools_instruments.py  test_tools_market_data.py  test_tools_orders.py  test_tools_session.py
